--- a/package.json
+++ b/package.json
@@ -1,1 +1,8 @@
-
+{
+  "name": "insurance-assistant-api",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "openai": "^4.56.0"
+  }
+}
